Fix width of metadata when nothing wraps

--- a/src/Components/css/ProjectDisplay.css
+++ b/src/Components/css/ProjectDisplay.css
@@ -16,6 +16,10 @@
   margin: 1rem 0;
 }
 
+.selected-project-metadata > div {
+  width: 100%;
+}
+
 .selected-project .selected-project-links {
   float: right;
 }
